--- a/session.html
+++ b/session.html
@@ -38,7 +38,7 @@
                 term.onCursorMove(e=> {
                   console.log(e);
                 });
-                term.onData(e => 
+                term.onData(e => {
                             console.log(e);
                   switch (e) {
                     case '\u0003': // Ctrl+C
