--- a/session.html
+++ b/session.html
@@ -69,7 +69,9 @@
                       break;
                     default: // Print all other characters for demo
                       if (e >= String.fromCharCode(0x20) && e <= String.fromCharCode(0x7E) || e >= '\u00a0') {
+                        console.log(`before ${command}`);
                         command += e;
+                        console.log(`after ${command}`);
                         term.write(e);
                       }
                   }
